[package]
name = "lattice"
version = "0.1.0"
edition = "2021"
description = "lattice — a spreadsheet with a Rust engine and a Tauri web UI."
license = "MIT"
authors = ["Daniel Bratcher"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sheet-core = { path = "../crates/sheet-core" }
sheet-io = { path = "../crates/sheet-io" }

[[bin]]
name = "lattice"
path = "src/main.rs"
