[package]
name = "sheet-io"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Persistence and interop for lattice workbooks: CSV, XLSX, ODS and native JSON."
authors = ["Daniel Bratcher"]

[lib]
name = "sheet_io"
path = "src/lib.rs"

[dependencies]
sheet-core = { path = "../sheet-core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
csv = "1"
calamine = "0.26"
rust_xlsxwriter = "0.79"
zip = { version = "2", default-features = false, features = ["deflate"] }
